# fetchdata

./: .gitignore  MANIFEST.in  buf.gen.yaml  buf.yaml  pyproject.toml
proto/: command.bat  methodid.proto
protobuf/: test.proto
src/: main.py  misc.py
src/cache/: __init__.py  cache_data.py  dataframe_recoder.py  protocol.py
src/data/: __init__.py  base_recoder.py  cache_data.py  constant.py  dataframe_recoder.py  entryexitanalysis.py  list_recoder.py  metrics.py  protocol.py  serialize.py  timerange.py
src/data/converter/: __init__.py  converter.py  orderflow.py  trade_converter.py
src/data/history/: __init__.py  history_utils.py
src/data/history/datahandlers/: idatahandler.py  parquetdatahandler.py
src/exchange/: __init__.py  ccxtexchange_factory.py  exchange.py  exchange_factory.py  protocol.py
src/fetchdata/: __init__.py  client.py  consumer.py  exchange.py  method_invoke.py  msgtype.py  producer.py  server.py
src/tradepulse/: misc.py
src/tradepulse/data/: __init__.py  cache_data.py  dataframe_recoder.py  list_recoder.py  protocol.py  timerange.py
src/tradepulse/data/converter/: converter.py  orderflow.py  trade_converter.py
src/tradepulse/data/history/: history_utils.py
src/tradepulse/data/history/datahandlers/: idatahandler.py  parquetdatahandler.py
src/tradepulse/exchange/: __init__.py  ccxtexchange_factory.py  exchange.py  exchange_factory.py  protocol.py
src/tradepulse/fetchdata/: client.py  inproc.py  method_invoke.py  server.py
src/tradepulse/message/: methodid_pb2.py  methodid_pb2.pyi
src/tradepulse/typenums/: __init__.py  candletype.py  constants.py  polars_scheme.py  timestamp.py
src/tradepulse/util/: __init__.py  datetime_helpers.py  dry_run_wallet.py  exchange_utils_timeframe.py  formatters.py
src/typenums/: Literal.py  __init__.py  constants.py  datatype.py  timerange.py  timestamp.py
src/util/: __init__.py  datetime_helpers.py  dry_run_wallet.py  exchange_utils_timeframe.py  formatters.py
tests/: f_pb2.py  test_cs.py  test_dataframe_recoder.py  test_exchange.py  test_factory.py  test_pb2.py  test_serialize.py  test_util.py
