[project]
name = "tradepulse"
version = "0.1.0"
description = "fetch crypto data"
readme = "README.md"
authors = [
    { name = "zt", email = "731315163@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cachetools>=6.0",
    "ccxt>=4.4.82",
    "communication",
    "orjson>=3.10.18",
    "polars[pyarrow]>=1.30.0",
    "protobuf>=6.31",
    "pyarrow>=20.0.0",
]

[project.optional-dependencies]

dev = [
  "pre-commit",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-mock",
  "pytest-random-order",
  "pytest-timeout",
  "pytest-xdist",
  "pytest",
  "ruff",
  "time-machine",
  "types-cachetools",
  "types-filelock",
  "types-python-dateutil",
  "types-requests",
  "types-tabulate",
]





[project.scripts]
fetchdata = "tradepulse:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build]
exclude = [
  "/.*",
  "/docs",
  "/tests",
  "/.gitignore",
  "/MANIFEST.in"
]

[tool.uv.sources]
communication = { git = "https://github.com/731315163/communication.git" }

[tool.pyright]

exclude = [
  "**/__pycache__",
  "build_helpers/*.py",
  "ft_client/build/*",
  "build/*",
]
ignore = ["freqtrade/vendor/**"]
pythonPlatform = "All"

# typeCheckingMode = "off"
# analyzeUnannotatedFunctions = false

# reportArgumentType = false  # 155
# reportAssignmentType = false  # 12
reportAttributeAccessIssue = "warning"  # 255
# reportCallIssue = false  # 23
# reportGeneralTypeIssues = false  # 48
# reportIncompatibleMethodOverride = false  # 15
# reportIncompatibleVariableOverride = false  # 5
# reportIndexIssue = false  # 22
# reportMissingImports = false  # 5
# reportOperatorIssue = false  # 7
reportOptionalMemberAccess = false  # 35
# reportOptionalOperand = false  # 7
# reportPossiblyUnboundVariable = false  # 36
# reportPrivateImportUsage = false  # 5
# reportRedeclaration = false  # 1
# reportReturnType = false  # 28
reportTypedDictNotRequiredAccess = false  # 27
# typeCheckingMode = "off"
# analyzeUnannotatedFunctions = false

